--- a/modules/admin-ui/src/main/webapp/scripts/shared/partials/modals/registration-modal.html
+++ b/modules/admin-ui/src/main/webapp/scripts/shared/partials/modals/registration-modal.html
@@ -4,34 +4,52 @@
   <header>
     <a ng-show="states[state]['buttons']['close']" ng-click="nextState(0)"
       class="fa fa-times close-modal"></a>
-    <h2 translate="REGISTRATION.MODAL.CAPTION">
+    <h2 translate="ADOPTER_REGISTRATION.MODAL.CAPTION">
       <!--Registration-->
     </h2>
   </header>
-  
+
   <div ng-show="state == 'information'" class="modal-content"
     style="display: block;">
     <div class="modal-body">
       <div class="registration-header">
-        <h2 translate="REGISTRATION.MODAL.INFORMATION.HEADER"></h2>
+        <h2 translate="ADOPTER_REGISTRATION.MODAL.INFORMATION_STATE.HEADER">
+          <!-- Thank you for using Opencast! -->
+        </h2>
       </div>
       <div>
         <div class="row">
           <div class="col">
-            <h3>Help us to make Opencast even better!</h3>
+            <h3 translate="ADOPTER_REGISTRATION.MODAL.INFORMATION_STATE.HEADER_HELP_US"></h3>
             <br />
-            <p>
-              Our developers are constantly working to provide you the best
-              possible user experience. <br />
-              <br /> To achieve that, we need to learn more about who uses
-              Opencast and how it gets used. <br />
-              <br /> You can help us to gather that information with quick
-              registration. <br />
-              <br />
-            </p>
+            <p translate="ADOPTER_REGISTRATION.MODAL.INFORMATION_STATE.INFORMATION_PARAGRAPH_1"></p>
+            <br />
+            <p translate="ADOPTER_REGISTRATION.MODAL.INFORMATION_STATE.INFORMATION_PARAGRAPH_2"></p>
+            <br />
+            <p translate="ADOPTER_REGISTRATION.MODAL.INFORMATION_STATE.INFORMATION_PARAGRAPH_3"></p>
           </div>
           <div class="col">
             <img src="img/summit_valencia.jpg">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div ng-show="state == 'legal_info'" class="modal-content"
+    style="display: block;">
+    <div class="modal-body">
+      <div class="registration-header">
+        <h2 translate="ADOPTER_REGISTRATION.MODAL.LEGAL_INFO_STATE.HEADER">
+          <!-- Thank you for using Opencast! -->
+        </h2>
+      </div>
+      <div>
+        <div class="row">
+          <div class="scrollbox">
+            <ng-include
+              src="'modules/registration/partials/terms-of-use.html'">
+              </ng-include>
           </div>
         </div>
       </div>
@@ -42,31 +60,76 @@
     style="display: block;">
     <div class="modal-body">
       <div class="registration-header">
-        <h2 translate="REGISTRATION.MODAL.SKIP_STATE.HEADER"></h2>
+        <h2 translate="ADOPTER_REGISTRATION.MODAL.SKIP_STATE.HEADER"></h2>
       </div>
       <div>
         <div class="row">
           <p>
-            If you want to register later on, you can do that at <b>Lorem
-              > Ipsum > Dolor</b> at any time. <br /> Also you can deactivate this
-            automatic registration request there.
+            <span translate="ADOPTER_REGISTRATION.MODAL.SKIP_STATE.TEXT_LEADING_TO_PATH">
+              <!-- If you want to register later on, you can do that at  -->
+            </span>
+            <b>
+              (<span translate="HELP.HELP"></span>)
+              <span class="fa fa-question-circle"></span>
+              >
+              <span translate="HELP.ADOPTER_REGISTRATION"></span>
+            </b>
+            <span translate="ADOPTER_REGISTRATION.MODAL.SKIP_STATE.TEXT_LEADING_AFTER_PATH">
+              <!-- at any time. -->
+            </span>
+            <br />
+            <span translate="ADOPTER_REGISTRATION.MODAL.SKIP_STATE.TEXT_DEACTIVATE_INFO">
+              <!-- Also you can deactivate this  automatic registration request there.  -->
+            </span>
           </p>
         </div>
       </div>
     </div>
   </div>
 
-  <div ng-show="state == 'save'" class="modal-content"
+  <div ng-show="state == 'delete_submit'" class="modal-content"
+    style="display: block;">
+    <div class="modal-body">
+      <div>
+        <p>
+          <span translate="ADOPTER_REGISTRATION.MODAL.DELETE_SUBMIT_STATE.TEXT"></span>
+        </p>
+      </div>
+    </div>
+  </div>
+
+  <div ng-show="state == 'save' || state == 'delete' || state == 'update'" class="modal-content"
+    style="display: block;">
+    <div class="modal-body">
+      <div>
+        <div class="row spinner-container">
+          <i class="fa fa-spinner fa-spin fa-4x fa-fw"></i>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div ng-show="state == 'thank_you'" class="modal-content"
     style="display: block;">
     <div class="modal-body">
       <div class="registration-header">
-        <h2 translate="REGISTRATION.MODAL.SAVE_STATE.HEADER"></h2>
+        <h2 translate="ADOPTER_REGISTRATION.MODAL.THANK_YOU_STATE.HEADER"></h2>
       </div>
       <div>
         <div class="row">
           <p>
-            You can change your data at <b>Lorem > Ipsum > Dolor</b> at any
-            time.
+            <span translate="ADOPTER_REGISTRATION.MODAL.THANK_YOU_STATE.TEXT_LEADING_TO_PATH">
+              <!-- You can change your data at   -->
+            </span>
+            <b>
+              (<span translate="HELP.HELP"></span>)
+              <span class="fa fa-question-circle"></span>
+              >
+              <span translate="HELP.ADOPTER_REGISTRATION"></span>
+            </b>
+            <span translate="ADOPTER_REGISTRATION.MODAL.THANK_YOU_STATE.TEXT_LEADING_AFTER_PATH">
+              <!-- at any time. -->
+            </span>
           </p>
         </div>
       </div>
@@ -79,18 +142,24 @@
     <div class="modal-body">
       <div>
         <fieldset>
-        <legend>Orangisation</legend>
+        <legend translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.ORGANISATION"></legend>
           <div class="row">
             <div class="col">
             <div class="form-group">
               <input type="text" id="adopter_organisation" ng-model="adopter.organisation_name" class="form-control" required>
-              <label class="form-control-placeholder" for="adopter_organisation">Organisation</label>
+              <label
+	              class="form-control-placeholder"
+	              for="adopter_organisation"
+	              translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.ORGANISATION"></label>
             </div>
             </div>
             <div class="col">
             <div class="form-group">
               <input type="text" id="adopter_department" ng-model="adopter.department_name" class="form-control">
-              <label class="form-control-placeholder" for="adopter_department">Department</label>
+              <label
+                class="form-control-placeholder"
+                for="adopter_department"
+                translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.DEPARTMENT"></label>
             </div>
             </div>
           </div>
@@ -98,33 +167,41 @@
             <div class="col">
               <div class="form-group">
                 <select id="adopter_country"
-                        class="form-control" 
+                        class="form-control"
                         ng-model="adopter.country"
                         required>
 
                   <option value=""></option>
-                  <option value="male">male</option>
-                  <option value="female">female</option>
+                  <option ng-repeat="country in countries | orderBy:'name'" value="{{country.code}}">{{country.name}}</option>
                 </select>
-                <label class="form-control-placeholder" for="adopter_country">Country</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_country"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.COUNTRY"></label>
               </div>
             </div>
             <div class="col">
             <div class="form-group-pair">
               <div class="form-group">
                 <input type="text" id="adopter_postalcode" ng-model="adopter.postal_code" class="form-control" required>
-                <label class="form-control-placeholder" for="adopter_postalcode">Postal Code</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_postalcode"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.POSTAL_CODE"></label>
               </div>
               <div class="form-group">
                 <input type="text" id="adopter_city" ng-model="adopter.city" class="form-control" required>
-                <label class="form-control-placeholder" for="adopter_city">City</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_city"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.CITY"></label>
               </div>
             </div>
             </div>
           </div>
         </fieldset>
         <fieldset>
-         <legend>Contact information</legend>
+         <legend translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.CONTACT_INFO"></legend>
           <div class="row">
             <div class="col">
             <div class="form-group-pair">
@@ -134,21 +211,30 @@
                         ng-model="adopter.gender">
 
                   <option value=""></option>
-                  <option value="male">male</option>
-                  <option value="female">female</option>
+                  <option value="male" translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.GENDER_MALE"></option>
+                  <option value="female" translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.GENDER_FEMALE"></option>
                 </select>
-                <label class="form-control-placeholder" for="adopter_gender">Gender</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_gender"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.GENDER"></label>
               </div>
               <div class="form-group">
                 <input type="text" id="adopter_firstname" ng-model="adopter.first_name" class="form-control">
-                <label class="form-control-placeholder" for="adopter_firstname">First Name</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_firstname"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.FIRST_NAME"></label>
               </div>
             </div>
             </div>
             <div class="col">
             <div class="form-group">
               <input type="text" id="adopter_lastname" ng-model="adopter.last_name" class="form-control">
-              <label class="form-control-placeholder" for="adopter_lastname">Last Name</label>
+              <label
+                class="form-control-placeholder"
+                for="adopter_lastname"
+                translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.LAST_NAME"></label>
             </div>
             </div>
           </div>
@@ -156,18 +242,27 @@
             <div class="col">
             <div class="form-group">
               <input type="text" id="adopter_street" ng-model="adopter.street" class="form-control">
-              <label class="form-control-placeholder" for="adopter_street">Street</label>
+              <label
+                class="form-control-placeholder"
+                for="adopter_street"
+                translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.STREET"></label>
             </div>
             </div>
             <div class="col">
             <div class="form-group-pair">
               <div class="form-group">
                 <input type="text" id="adopter_streetnumber" ng-model="adopter.street_no" class="form-control">
-                <label class="form-control-placeholder" for="adopter_streetnumber">Number</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_streetnumber"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.NUMBER"></label>
               </div>
               <div class="form-group">
                 <input type="text" id="adopter_addressadd" ng-model="adopter.adress_additional" class="form-control">
-                <label class="form-control-placeholder" for="adopter_addressadd">Add. adress information</label>
+                <label
+                  class="form-control-placeholder"
+                  for="adopter_addressadd"
+                  translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.ADDITIONAL_ADRESS_INFO"></label>
               </div>
             </div>
             </div>
@@ -176,7 +271,10 @@
             <div class="col">
             <div class="form-group">
               <input id="adopter_emailadr" type="email" ng-model-options="{ debounce: 300 }" ng-model="adopter.mail" class="form-control">
-              <label class="form-control-placeholder" for="adopter_emailadr">Email</label>
+              <label
+	              class="form-control-placeholder"
+	              for="adopter_emailadr"
+	              translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.MAIL"></label>
             </div>
             </div>
             <div class="col">
@@ -186,28 +284,34 @@
                      ng-model="adopter.contact_me"
                      ng-model-options="{ allowInvalid: true }"
                      class="form-control">
-              <label for="adopter_contactme">Contact me for updates and secruity issues</label>
+              <label
+                for="adopter_contactme"
+                translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.CONTACT_ME"></label>
             </div>
             </div>
           </div>
           </fieldset>
           <fieldset>
-            <legend>Which data do you want to share?</legend>
+            <legend translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.WHICH_DATA_TO_SHARE"></legend>
 	              <div class="form-group form-group-checkbox">
 		              <input type="checkbox"
 		                     id="adopter_allows_statistics"
 		                     ng-model="adopter.allows_statistics"
 		                     ng-model-options="{ allowInvalid: true }"
 		                     class="form-control">
-		              <label for="adopter_allows_statistics">Usage statistcs </label>
+		              <label
+		                for="adopter_allows_statistics"
+		                translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.USAGE_STATISTICS"></label>
 		            </div>
                 <div class="form-group form-group-checkbox">
                   <input type="checkbox"
                          id="adopter_allows_err_reports"
                          ng-model="adopter.allows_error_reports"
-                         ng-model-options="{ allowInvalid: true }" 
+                         ng-model-options="{ allowInvalid: true }"
                          class="form-control">
-                  <label for="adopter_allows_err_reports">Error reports</label>
+                  <label
+                    for="adopter_allows_err_reports"
+                    translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.ERROR_REPORTS"></label>
                 </div>
                 <div class="form-group form-group-checkbox">
                   <input type="checkbox"
@@ -215,12 +319,22 @@
                          ng-model="adopter.allows_tech_data"
                          ng-model-options="{ allowInvalid: true }"
                          class="form-control">
-                  <label for="adopter_allows_tech_data">Technical server data</label>
+                  <label
+                    for="adopter_allows_tech_data"
+                    translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.TECHNICAL_SERVER_DATA"></label>
                 </div>
                 <hr/>
                 <div class="form-group form-group-checkbox">
 			             <input type="checkbox" id="agreement-terms-of-use" class="form-control" ng-model="tos_agreed" required>
-			             <label for="agreement-terms-of-use">I have read and agree to the privacy policy and terms of use</label>
+			             <label
+			               for="agreement-terms-of-use">
+                     <span translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.READ_TERMS_OF_USE_BEFORE"></span>
+                     <span
+                       translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.READ_TERMS_OF_USE_LINK"
+                       class="link"
+                       ng-click="nextState(2)"></span>
+                     <span translate="ADOPTER_REGISTRATION.MODAL.FORM_STATE.READ_TERMS_OF_USE_AFTER"></span>
+		               </label>
 			           </div>
           </fieldset>
       </div>
@@ -231,18 +345,27 @@
     <div class="pull-right" ng-show="states[state]['buttons']['submit']">
       <a ng-hide="state == 'form'" class="continue-registration" ng-click="nextState(1)"
         translate="{{states[state]['buttons']['submitButtonText']}}"></a>
-      <a ng-show="state == 'form'" 
-         class="submit inactive" 
+      <a ng-show="state == 'form' && !registered"
+         class="submit inactive"
          ng-class="{inactive: adopterRegistrationForm.$invalid}"
          ng-click="nextState(1)"
          translate="{{states[state]['buttons']['submitButtonText']}}"></a>
+      <a ng-show="state == 'form' && registered"
+         class="submit inactive"
+         ng-class="{inactive: adopterRegistrationForm.$invalid}"
+         ng-click="nextState(3)"
+         translate="UPDATE"></a>
     </div>
     <a ng-show="states[state]['buttons']['back']" class="cancel"
-      ng-click="nextState(0)" translate="REGISTRATION.MODAL.BACK"></a>
+      ng-click="nextState(0)" translate="ADOPTER_REGISTRATION.MODAL.BACK"></a>
+    <a ng-show="state == 'form' && registered"
+       class="danger"
+       ng-click="nextState(4)"
+       translate="DELETE"></a>
     <div ng-show="states[state]['buttons']['skip']"
       class="skip-registration">
       <div class="skip-registration-text">
-        <span ng-click="nextState(0)" translate="REGISTRATION.MODAL.SKIP"></span>
+        <span class="link" ng-click="nextState(0)" translate="ADOPTER_REGISTRATION.MODAL.SKIP"></span>
       </div>
     </div>
   </footer>
