adopter registration - phase 1

--- a/modules/admin-ui/src/main/webapp/scripts/modules/registration/partials/terms-of-use.html
+++ b/modules/admin-ui/src/main/webapp/scripts/modules/registration/partials/terms-of-use.html
@@ -1,38 +1,118 @@
-<h1>Terms of use</h1>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Nec feugiat in fermentum posuere urna nec. Vitae et leo duis ut. Quis lectus nulla at volutpat diam ut venenatis. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Nulla porttitor massa id neque aliquam. At urna condimentum mattis pellentesque id nibh tortor id. Massa id neque aliquam vestibulum morbi blandit cursus risus.
+
+<h1 style="font-size: x-large;margin-bottom: 15px"
+    translate="ADOPTER_REGISTRATION.MODAL.LEGAL_INFO_STATE.HEADER">
+</h1>
+
+<p style="padding-bottom: 15px">
+  Thank you for using Opencast. We really appreciate your registration.
+  You can change the data you provided at any time. To do so, go to the “Opencast Registration”
+  in the menu “Help” of the administrative user interface. If you deleted your Opencast
+  installation, want to remove your account but cannot anymore, please write an email to
+  support@opencast.org.
 </p>
-<p>
-  Sed elementum tempus egestas sed sed risus. Netus et malesuada fames ac turpis egestas sed. Mattis pellentesque id nibh tortor id aliquet lectus. Egestas purus viverra accumsan in nisl nisi. Venenatis cras sed felis eget velit aliquet sagittis id consectetur. Enim tortor at auctor urna. Eget duis at tellus at urna condimentum mattis pellentesque id. Commodo sed egestas egestas fringilla phasellus faucibus. Leo vel orci porta non pulvinar neque laoreet suspendisse. Mattis enim ut tellus elementum sagittis. Massa tempor nec feugiat nisl pretium fusce id. 
+
+<p style="padding-bottom: 15px">
+  Although Opencast is free, open-source software it is important for us,
+  to know how Opencast is used. For instance, hardware vendors want to know how
+  large the market is before they make their devices Opencast compatible. Even public
+  funding for further development relies on such data.
 </p>
-<p>
-  Quam id leo in vitae turpis massa sed. Ullamcorper sit amet risus nullam eget. Fermentum iaculis eu non diam phasellus vestibulum. Ac turpis egestas sed tempus. Mauris vitae ultricies leo integer malesuada. Arcu vitae elementum curabitur vitae nunc sed velit. Leo vel fringilla est ullamcorper. Vestibulum lectus mauris ultrices eros in cursus turpis massa tincidunt. Ullamcorper eget nulla facilisi etiam. In dictum non consectetur a. Elementum facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Eget magna fermentum iaculis eu non diam phasellus. Nisl nunc mi ipsum faucibus vitae. Leo in vitae turpis massa sed elementum tempus egestas.
+
+<p style="padding-bottom: 15px">
+  Note that you can choose which data you want to provide and do not have to
+  agree to sending data from all categories.
 </p>
-<p>
-  Tincidunt vitae semper quis lectus nulla at volutpat diam. Est ante in nibh mauris cursus mattis. Sit amet volutpat consequat mauris nunc congue nisi. Ac tortor dignissim convallis aenean et tortor at risus viverra. Volutpat blandit aliquam etiam erat. Turpis egestas integer eget aliquet nibh. Duis at consectetur lorem donec massa sapien faucibus et. Morbi tincidunt augue interdum velit. Viverra adipiscing at in tellus integer. Aliquam ut porttitor leo a. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Interdum velit euismod in pellentesque massa placerat duis ultricies lacus.
+
+
+
+
+
+
+
+<h1 style="font-size: x-large;margin: 15px 0">
+  What Happens With Your Data
+</h1>
+
+<p style="padding-bottom: 10px; font-weight: bold">
+  <span>Personal/Organizational Data</span>
 </p>
-<p>
-  A condimentum vitae sapien pellentesque habitant morbi tristique senectus. Vulputate odio ut enim blandit volutpat. Quis blandit turpis cursus in hac habitasse. Suspendisse sed nisi lacus sed viverra tellus. Ultrices sagittis orci a scelerisque purus semper. Nunc mattis enim ut tellus elementum sagittis vitae et leo. Nunc sed blandit libero volutpat. Nunc aliquet bibendum enim facilisis gravida neque convallis a. 
+
+<p style="padding-bottom: 15px">
+  If provided, we will publish the name of your institution on opencast.org and set
+  a geographical marker for your institution on the Opencast adopter’s map.
 </p>
-<p>
-  Interdum velit laoreet id donec. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Tellus molestie nunc non blandit massa enim nec dui. Morbi tristique senectus et netus et malesuada. Nulla aliquet enim tortor at auctor urna. Scelerisque eu ultrices vitae auctor eu augue. Diam sollicitudin tempor id eu nisl nunc mi ipsum. Cras pulvinar mattis nunc sed blandit. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Amet nisl purus in mollis nunc. Nulla aliquet porttitor lacus luctus accumsan tortor.
+
+<p style="padding-bottom: 10px; font-weight: bold">
+  <span>Usage Statistics and Technical Data</span>
 </p>
-<h1>Privacy policy</h1>
-<p>
-  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur adipiscing elit ut aliquam purus sit amet luctus venenatis. Nec feugiat in fermentum posuere urna nec. Vitae et leo duis ut. Quis lectus nulla at volutpat diam ut venenatis. Sollicitudin aliquam ultrices sagittis orci a scelerisque purus semper. Nulla porttitor massa id neque aliquam. At urna condimentum mattis pellentesque id nibh tortor id. Massa id neque aliquam vestibulum morbi blandit cursus risus.
+
+<p style="padding-bottom: 15px">
+  This data is anonymized and will be stored without any relation to your organizational
+  or personal data. The data will be sent in a regular interval. The data sent may include
+  the following information:
 </p>
-<p>
-  Sed elementum tempus egestas sed sed risus. Netus et malesuada fames ac turpis egestas sed. Mattis pellentesque id nibh tortor id aliquet lectus. Egestas purus viverra accumsan in nisl nisi. Venenatis cras sed felis eget velit aliquet sagittis id consectetur. Enim tortor at auctor urna. Eget duis at tellus at urna condimentum mattis pellentesque id. Commodo sed egestas egestas fringilla phasellus faucibus. Leo vel orci porta non pulvinar neque laoreet suspendisse. Mattis enim ut tellus elementum sagittis. Massa tempor nec feugiat nisl pretium fusce id. 
+
+<ul style="padding-left: 30px; list-style: disc; padding-bottom: 15px; color: #333">
+  <li>A timestamp at which this data has been created</li>
+  <li>An identifier marking the data source but is impossible
+    to link to your personal or organizational data
+  </li>
+  <li>The number and status of events in your Opencast system</li>
+  <li>The total duration of all media in your Opencast system</li>
+  <li>The number of series in your Opencast system</li>
+  <li>The number of capture agents connected to your Opencast system</li>
+  <li>The version of your Opencast system</li>
+  <li>Technical data regarding servers in your Opencast system
+    <ul style="padding-left: 80px; list-style: circle">
+      <li>A unique anonymous identifier for each server</li>
+      <li>The number of CPU cores of each server</li>
+      <li>The system memory of each server</li>
+      <li>The disk space of each server</li>
+      <li>The Opencast services running on each server</li>
+    </ul>
+  </li>
+</ul>
+
+
+
+
+
+<p style="padding-bottom: 10px; font-weight: bold">
+  <span>Error Reports</span>
 </p>
-<p>
-  Quam id leo in vitae turpis massa sed. Ullamcorper sit amet risus nullam eget. Fermentum iaculis eu non diam phasellus vestibulum. Ac turpis egestas sed tempus. Mauris vitae ultricies leo integer malesuada. Arcu vitae elementum curabitur vitae nunc sed velit. Leo vel fringilla est ullamcorper. Vestibulum lectus mauris ultrices eros in cursus turpis massa tincidunt. Ullamcorper eget nulla facilisi etiam. In dictum non consectetur a. Elementum facilisis leo vel fringilla est ullamcorper eget nulla facilisi. Eget magna fermentum iaculis eu non diam phasellus. Nisl nunc mi ipsum faucibus vitae. Leo in vitae turpis massa sed elementum tempus egestas.
+
+<p style="padding-bottom: 15px">
+  Error reports can be automatically sent so that we can monitor if there
+  are systematic errors within Opencast that were not detected in our QA.
 </p>
-<p>
-  Tincidunt vitae semper quis lectus nulla at volutpat diam. Est ante in nibh mauris cursus mattis. Sit amet volutpat consequat mauris nunc congue nisi. Ac tortor dignissim convallis aenean et tortor at risus viverra. Volutpat blandit aliquam etiam erat. Turpis egestas integer eget aliquet nibh. Duis at consectetur lorem donec massa sapien faucibus et. Morbi tincidunt augue interdum velit. Viverra adipiscing at in tellus integer. Aliquam ut porttitor leo a. Amet nisl suscipit adipiscing bibendum est ultricies integer quis. Interdum velit euismod in pellentesque massa placerat duis ultricies lacus.
+
+<p style="padding-bottom: 15px">
+  Note that this data will be linked to your organization so that we are
+  able to warn you in case we found a critical behavior. The error reports
+  may also contain information about your content. This data will not be public.
+  It will only be accessible to Opencast committers.
 </p>
-<p>
-  A condimentum vitae sapien pellentesque habitant morbi tristique senectus. Vulputate odio ut enim blandit volutpat. Quis blandit turpis cursus in hac habitasse. Suspendisse sed nisi lacus sed viverra tellus. Ultrices sagittis orci a scelerisque purus semper. Nunc mattis enim ut tellus elementum sagittis vitae et leo. Nunc sed blandit libero volutpat. Nunc aliquet bibendum enim facilisis gravida neque convallis a. 
+
+<p style="padding-bottom: 10px">
+  The data sent may include the following information:
 </p>
-<p>
-  Interdum velit laoreet id donec. Phasellus faucibus scelerisque eleifend donec pretium vulputate sapien nec sagittis. Tellus molestie nunc non blandit massa enim nec dui. Morbi tristique senectus et netus et malesuada. Nulla aliquet enim tortor at auctor urna. Scelerisque eu ultrices vitae auctor eu augue. Diam sollicitudin tempor id eu nisl nunc mi ipsum. Cras pulvinar mattis nunc sed blandit. Vestibulum mattis ullamcorper velit sed ullamcorper morbi tincidunt. Amet nisl purus in mollis nunc. Nulla aliquet porttitor lacus luctus accumsan tortor.
+
+<ul style="padding-left: 30px; list-style: disc; padding-bottom: 15px; color: #333">
+  <li><span>Stack traces</span></li>
+  <li>Error messages</li>
+  <li>A timestamp when the error occurred</li>
+  <li>The Opencast version</li>
+</ul>
+
+
+
+<h1 style="font-size: x-large;margin: 15px 0">
+  Thanks!
+</h1>
+
+<p style="padding-bottom: 25px">
+  We highly appreciate any feedback, as even some of the data that we gather
+  about the Opencast usage will help us to create better software, have better
+  chances for additional funding and attract more companies to provide services
+  around Opencast.
 </p>
